/cdc_hospitalizations/create.sql
/cdc_hospitalizations/increase_race_category_length.sql
/state_trend_data/create.sql
/state_trend_data/fix_tests_7_day_mean_column.sql
/state_trend_data/add_column_hotspot.sql
/state_trend_data/add_column_state.sql
/police_shooting_data/create.sql
/police_shooting_data/increase_name_column_length.sql
/police_shooting_data/increase_armed_column_length.sql
/weekly_evictions/create.sql
/weekly_evictions/add_column_geo_id.sql
/weekly_evictions/add_column_county.sql
/county_location_data/create.sql
/county_location_data/modify_column_geo_id_to_varchar.sql
/county_location_data/remove_longitude_latitude_columns.sql
/county_coordinates_data/create.sql
/county_coordinates_data/modify_coordinate_columns_to_varchar.sql
/apha_map/create.sql
/apha_map/modify_date_column_to_allow_null.sql
/apha_map/rename_column_link_to_declaration.sql
/apha_map/increase_entity_name_column_length.sql
/google_mobility/create.sql
/google_mobility/add_additional_missing_columns.sql
/cases_by_race_ethnicity/create.sql
/deaths_by_race_ethnicity/create.sql
/vaccinations_by_race_ethnicity/create.sql
/hrsa_vaccine_program/create.sql
/state_trend_data/add_column_positivity_rate.sql